2002-12-16  Art Haas  <ahaas@airmail.net>

	* io/ftw.c: Convert GCC extension initializer syntax to C99.

2002-12-16  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/syscalls.list: Add epoll_create,
	epoll_ctl, and epoll_wait.
	* sysdeps/unix/sysv/linux/Versions [libc: GLIBC_2.3.2]: Add
	epoll_create, epoll_ctl, and epoll_wait.
	* sysdeps/unix/sysv/linux/sys/epoll.h: New file.  Written by
	Davide Libenzi <davidel@xmailserver.org>.
	* sysdeps/unix/sysv/linux/Dist: Add sys/epoll.h.
	* sysdeps/unix/sysv/linux/Makefile [subdir=misc] (sysdep_headers):
	Add sys/epoll.h.

2002-12-16  Art Haas  <ahaas@airmail.net>

	* sysdeps/generic/bp-semctl.h: Convert GCC extension initializer
	syntax to C99
	* sysdeps/unix/sysv/aix/settimer.c: Likewise.
	* sysdeps/unix/sysv/aix/sleep.c: Likewise.
	* sysdeps/unix/sysv/aix/usleep.c: Likewise.

2002-12-16  Ulrich Drepper  <drepper@redhat.com>

	* stdio-common/Makefile (routines): Remove lockfile.  Add
	flockfile, ftrylockfile, and funlockfile.
	* sysdeps/generic/lockfile.c: Removed.  Each function has its own file.
	* sysdeps/generic/flockfile.c: New file.
	* sysdeps/generic/ftrylockfile.c: New file.
	* sysdeps/generic/funlockfile.c: New file.

2002-12-16  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/i386/socket.S: Use CENABLE and CDISABLE
	macros instead of doing the calls directly.
	* sysdeps/unix/make-syscalls.sh: Add ptw-*.$o target name to rules.
	* Makerules ($(+sysdir_pfx)sysd-rules): Emit rules for ptw-%
	targets.

2002-12-16  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/fpu/bits/mathinline.h: Backout last change.
	* sysdeps/ieee754/bits/nan.h: Likewise.

	* sysdeps/unix/sysv/linux/ia64/syscalls.list (__syscall_open,
	__syscall_wait4, __syscall_ioctl, __syscall_write): Add.

2002-12-16  Roland McGrath  <roland@redhat.com>

	* sunrpc/xdr_mem.c (xdrmem_inline): Fix argument type.
	* sunrpc/xdr_rec.c (xdrrec_inline): Likewise.
	* sunrpc/xdr_stdio.c (xdrstdio_inline): Likewise.
