@@ -1,3 +1,8 @@
+2002-12-16  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/posix/getaddrinfo.c (gaih_inet): If __nss_lookup_function
+	fails to return a function pointer don't use it.
+
 2002-12-16  Art Haas  <ahaas@airmail.net>
 
 	* io/ftw.c: Convert GCC extension initializer syntax to C99.
